--- a/src/components/mystyle.module.css
+++ b/src/components/mystyle.module.css
@@ -179,8 +179,6 @@ nav.shift ul li a:hover:after {
     background: url("../images/bb.jpg");
     background-position: center;
     background-size: cover;
-    position: absolute;
-    z-index: -1;
     width: 100%;
     object-fit: cover;
    margin-left: 50px;
@@ -190,4 +188,21 @@ nav.shift ul li a:hover:after {
     text-align: center;
     opacity: 50%;
     font-size: 18px;
+}
+.mod{
+    background: url("../images/image1.jpg");
+    background-position: center;
+    background-size: cover;
+    position: absolute;
+    z-index: -1;
+    width: 100%;
+    object-fit: cover;
+}
+.title1 {
+    margin-top: 30px;
+    margin-left: 150px;
+    font-size: 40px;
+    font-weight: bold;
+    font-family: 'Times New Roman', Times, serif;
+    color: rgba(59, 57, 56, 0.863);
 }
